# etl-aws

./: .dockerignore  .gitignore  Dockerfile  glue.py  main.py  pyproject.toml  steps_projeto
data/processed/: tbl_cotacao_ibovespa_processed.csv
data/raw/: tbl_acoes_ibovespa_historico.csv  tbl_acoes_ibovespa_historico_nova_rodada.csv
glue-env/: pyvenv.cfg
glue-env/Scripts/: activate  activate.bat
notebooks/: eda.ipynb  model_evaluation.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/catboost_info/tmp/: cat_feature_index.2c94265d-ab3f611c-98466037-772cee39.tmp  cat_feature_index.32aa4b0b-c6c3f740-c0ba1ade-2983154c.tmp  cat_feature_index.369e62f3-c8884a90-57d730d4-fbeadc72.tmp  cat_feature_index.3b85c294-31626822-d0a8e04e-9f3eef8e.tmp  cat_feature_index.3c868e46-60182acb-18711f3a-9f1c009c.tmp  cat_feature_index.4eba9ffe-78fe4737-2f203ebd-5648f08.tmp  cat_feature_index.54a5bfd4-5024c5da-a1f4d72d-d60a2ede.tmp  cat_feature_index.636032e7-234e3a6a-c442fc40-3046ce68.tmp  cat_feature_index.646032ab-97295b45-9d3afb6b-48f7411f.tmp  cat_feature_index.652fc6f4-2beadab1-be73a3e8-d810c4bc.tmp  cat_feature_index.6aa2ae8e-ef2120f9-7fca191d-5da8b682.tmp  (+19 more)
src/config/: constants.py  logging_config.py
src/data/: preprocessing.py  visualize.py
src/etl/: s3.py  webscrapping.py  webscrapping_proxy.py
src/lambda_predict/: lambda_function.py  requirements.txt
src/model/: fodase.py  metrics_visualizer.py  train.py  utils.py  visualize.py
src/sripts.py/: train.py
(+3 files in other folders)
