[project]
name = "etl"
version = "0.1.0"
description = ""
authors = [
    {name = "'eder.ray'",email = "'eder.ray@gmail.com'"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3 (>=1.39.6,<2.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=1.26,<2.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "playwright (>=1.54.0,<2.0.0)",
    "selenium (>=4.34.2,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "pyarrow (==15.0.2)",
    "yfinance (>=0.2.65,<0.3.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "holidays (>=0.77,<0.78)",
    "ipywidgets (>=8.1.7,<9.0.0)"
]

[tool.poetry]
packages = [{include = "etl", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
